# UTubeHelperBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install-requirements.sh  pyproject.toml
src/: main.py
src/clients/: bitly.py  youtube.py
src/config/: database.py
src/exceptions/: youtube.py
src/models/: youtube.py
src/services/: youtube.py
src/utils/: bot.py  core.py  youtube.py
