[tool.poetry]
name = "utubebot"
version = "0.1.0"
description = ""
authors = ["roci <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.14.3"
google-api-python-client = "^2.18.0"
google-auth-oauthlib = "^0.4.5"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
